--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/passport": "^11.8",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "mailersend/laravel-driver": "^2.6",
         "spatie/laravel-permission": "^6.7"
     },
     "require-dev": {
@@ -62,7 +63,8 @@
         "preferred-install": "dist",
         "sort-packages": true,
         "allow-plugins": {
-            "pestphp/pest-plugin": true
+            "pestphp/pest-plugin": true,
+            "php-http/discovery": true
         }
     },
     "minimum-stability": "stable",
